2008-04-05  Moritz  <moritz@gnu.org>

	* README.keys, users.skel: New files.
	* Makefile.am (install-conf-skeleton): use "localdb" prefix;
	install new files.

2005-12-11  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am: Touch user database file.

2005-09-25  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am: New file.