@@ -1,3 +1,8 @@
+2008-04-13  Moritz  <moritz@gnu.org>
+
+	* poldi.texi: Many improvements (primarily in respect to X509
+	auth).
+
 2008-04-05  Moritz  <moritz@gnu.org>
 
 	* poldi.tex: Updated and improved.
