@@ -1,3 +1,7 @@
+2008-04-13  Moritz  <moritz@gnu.org>
+
+	* README.keys: Cosmetics.
+
 2008-04-05  Moritz  <moritz@gnu.org>
 
 	* README.keys, users.skel: New files.
